--- a/src/main/resources/templates/mitarbeitertyp.html
+++ b/src/main/resources/templates/mitarbeitertyp.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
- 	<link rel="import" href="/fragment/topnav.html">
+	<head th:replace="/fragment/header :: header"></head>	
  	<title>Mitarbeitertyp</title>
 </head>
 	<body>
-		<head th:replace="/fragment/header :: header"></head>	
-<body>
-	<h2>Einen neuen Mitarbeitertyp hinzuf&uuml;gen</h2>
+
+<body class="genBackground">
 <div class="container">
+<h2>Einen neuen Mitarbeitertyp hinzuf&uuml;gen</h2>
     <form action="#" th:action="@{/mitarbeitertyp}" th:object="${mitarbeitertyp}" method="post">
     
     	<p class="error-message"
@@ -46,51 +46,53 @@
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
        	</div>
-       	
         <p><input type="submit" value="Bestätigen" /> </p>
     </form>
-</div>
-<h3>Übersicht Mitarbeitertypen</h3>
-
-<div th:unless="${#lists.isEmpty(mitarbeitertypen)}">
-<table class="mainTable">
-<thead>
-<tr>
-<th>Kuerzel</th>
-<th>Name</th>
-</tr>
-</thead>
-<dl th:each="mitarbeitertyp : ${mitarbeitertypen}">
-<tr>
-<td th:text="${mitarbeitertyp.kuerzel}"></td>
-<td th:text="${mitarbeitertyp.name}"></td>
-<td>
-	<a href="#" data-th-href="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}">
-	<input type="button" class="buttons" value="Ändern"/>
-	</a>
-</td>
-</tr>
-</table>
-</div>
-<div th:if="${#lists.isEmpty(mitarbeitertypen)}">
-<p>Es gibt kein Mitarbeitertyp</p>
-</div>
-<hr/>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-
-            <div th:if="${param.success}">
-                <div class="alert alert-info">
-                    Der neue Mitarbeitertyp wurde erfolgreich eingetragen!
-                </div>
-            </div>
-			<div th:if="${param.loeschen}">
-                <div class="alert alert-info">
-                    Der Mitarbeitertyp wurde erfolgreich gelöscht!
-                </div>
-            </div>
-            
+<br>    
+<br>    
+<h3>Übersicht Mitarbeitertypen:</h3>
+	<div th:unless="${#lists.isEmpty(mitarbeitertypen)}">
+	<table class="mainTable">
+		<thead>
+			<tr>
+				<th>Kuerzel</th>
+				<th>Name</th>
+				<th class="CellWithComment"><i class="far fa-question-circle"></i>
+					<span class="CellComment" >Mitarbeitertypen bearbeiten</span>
+				</th>
+			</tr>
+		</thead>
+	<dl th:each="mitarbeitertyp : ${mitarbeitertypen}">
+		<tr>
+			<td th:text="${mitarbeitertyp.kuerzel}"></td>
+			<td th:text="${mitarbeitertyp.name}"></td>
+			<td>
+				<a href="#" data-th-href="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}">
+					<input type="button" class="buttons" value="Ändern"/>
+				</a>
+			</td>
+		</tr>
+	</table>
+	</div>
+	<div th:if="${#lists.isEmpty(mitarbeitertypen)}">
+	<p>Es gibt kein Mitarbeitertyp</p>
+	</div>
+	<hr>
+	    <div class="row">
+	        <div class="col-md-6 col-md-offset-3">
+	
+	            <div th:if="${param.success}">
+	                <div class="alert alert-info">
+	                    Der neue Mitarbeitertyp wurde erfolgreich eingetragen!
+	                </div>
+	            </div>
+				<div th:if="${param.loeschen}">
+	                <div class="alert alert-info">
+	                    Der Mitarbeitertyp wurde erfolgreich gelöscht!
+	                </div>
+	            </div>
+	         </div>
+	  </div>
 </div>
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
