--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -5,39 +5,38 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
- 	<title>Passwortaenderung</title>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
+ 	<title>PasswortAendern</title>
+ 	<head th:replace="/fragment/header :: header"></head>	
 </head>
 	<body class="genBackground">
-		<head th:replace="/fragment/header :: header"></head>	
 		<div class="container">
-		    <div class="row">
-		        <div class="col-md-6 col-md-offset-3">
-		            <h1>Change Password</h1>
-		
+			<h2>Passwort ändern</h2>
+		   <div class="row">
+		   	<div class="col-50">
 					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}" method="post">
-					    <fieldset>
-					        <table>
+					        <table class="mainTable">
 					            <thead>
 					                <tr>
-					                	<th></th>
+					                	<th class="CellWithComment"><i class="far fa-question-circle"></i>
+											<span class="CellComment" >Mitarbeiter auswählen</span>
+										</th>
 					                    <th>Username</th>
 					                    <th>Password</th>
 					                </tr>
 					            </thead>
 					            <tbody>
 									<tr th:each="user, itemStat : *{users}">
-									    <td><input	type="radio"
+									    <td><input type="radio"
 									    			name="radiobutton" 
 									    			th:value="*{users[__${itemStat.index}__].username}" 
-									    			class="radioButton" 
 									    			th:onclick="${'inputClick('''+ itemStat.index +''')'}" /></td>
 									    <td><label><span th:text="*{users[__${itemStat.index}__].username}"></span></label></td>
-									    <td><input	class="passwordField" 
-									    			type="password" 
+									    <td><input class="passwordField" type="password" 
 									    			name="passwordField" 
 									    			th:field="*{users[__${itemStat.index}__].password}" 
 									    			th:id="${itemStat.index}" 
@@ -45,8 +44,6 @@
 									</tr>
 					            </tbody>
 					        </table>
-							<input type="submit" id="submitButton" th:value="Speichern"/>
-					    </fieldset>
 					</form>
 
 		            <div th:if="${param.success}">
@@ -54,13 +51,12 @@
 		                    The user password was successfully changed.
 		                </div>
 		            </div>
-		         </div>
+		          </div>
 		    </div>
+		    <input type="submit" id="submitButton" th:value="Speichern" class="bigButtons"/>
 		</div>
-
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-
 		<script>
 		    function inputClick(id) {
 		        var passwordFields = document.getElementsByClassName("passwordField");
@@ -70,6 +66,5 @@
 		        document.getElementById(id).removeAttribute('disabled');
 		    }
 		</script>
-		
 	</body>
 </html>
