--- a/src/main/resources/templates/mitarbeitertypupdate.html
+++ b/src/main/resources/templates/mitarbeitertypupdate.html
@@ -4,18 +4,17 @@
 	 <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
- 	<link rel="import" href="/fragment/topnav.html">
+ 	<head th:replace="/fragment/header :: header"></head>
     <title>Mitarbeitertyp Aktualisieren</title>
 </head>
-<body>
-<head th:replace="/fragment/header :: header"></head>	
-	<h2>Mitarbeitertyp</h2>
+<body class ="genBackground">
 <div class="container">
+<h2>Mitarbeitertyp</h2>
+
 <form action="#" th:action="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}" th:object="${mitarbeitertyp}" method="post">
     
     	<p class="error-message"
@@ -54,6 +53,5 @@
 			</script>
 </form>
 </div>   
-	
 </body>
 </html>
