--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<title>Report</title>
+	<head th:replace="/fragment/header :: header"></head>
 </head>
-<body>
-<head th:replace="/fragment/header :: header"></head>
-
-<title>Report</title>
-
-<h3>Report f&uuml;r informative Ansichten</h3>
-
+<body class="genBackground">
+<h2>Report f&uuml;r informative Ansichten</h2>
 <div class="container">
 	<form name="datePickerForm" action="#" th:action="@{/pdf}" th:target="_blank" method="post" onsubmit="event.preventDefault(); validateForm();">
 	<div class="row">
