veranstaltunggebucht.html edited
* commented out unfinished fragment in neuveranstaltung.html
* added basic html/css to veranstaltunggebucht.html

--- a/src/main/resources/templates/neuveranstaltung.html
+++ b/src/main/resources/templates/neuveranstaltung.html
@@ -13,7 +13,7 @@
 	<title>Verantaltung hinzufügen</title>
 </head>
 <body class="genBackground">
-<div class="modal" id="myNeuVeran" th:fragment="NeuVeran">
+<!-- <div class="modal" id="myNeuVeran" th:fragment="NeuVeran"> -->
 <h2>Eine neue Veranstaltung erstellen</h2>
 	<div class="container">
 		<form action="#" th:action="@{/neuveranstaltung}"
@@ -82,7 +82,7 @@
 			</p>
 		</form>
 	</div>
-</div>
+<!-- </div> -->
 	<script>
 			function myFunction() {
 				var x = document.getElementById("myNeuVeran");
