--- a/src/main/resources/templates/veranstaltunggebucht.html
+++ b/src/main/resources/templates/veranstaltunggebucht.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<head th:replace="/fragment/header :: header"></head>	
  	<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
 </head>
-<body>
+<body class="genBackground">
 <div class="container">
 	<h2>Buchung Übersicht</h2>
 	<div th:unless="${#lists.isEmpty(veranstaltunggebucht)}">
-		<table class="table table-striped">
+		<table class="mainTable">
 			<thead>
 				<tr>
 					<th>Bezeichnung</th>
@@ -27,24 +28,24 @@
 				</tr>
 			</thead>
 		<dl th:each="buchung : ${veranstaltunggebucht}">
-		<tr>
-			<td th:text="${buchung.material.bezeichnung}"></td>
-			<td th:text="${buchung.menge}"></td>
-			<td th:text="${buchung.veranstaltung.name}"></td>
-			<td th:text="${buchung.beschreibung}"></td>
-			<td th:text="${buchung.createdAt}"></td>
-			<td th:text="${buchung.modifiedBy}"></td>
-		</tr>
+			<tbody>
+				<tr>
+					<td th:text="${buchung.material.bezeichnung}"></td>
+					<td th:text="${buchung.menge}"></td>
+					<td th:text="${buchung.veranstaltung.name}"></td>
+					<td th:text="${buchung.beschreibung}"></td>
+					<td th:text="${buchung.createdAt}"></td>
+					<td th:text="${buchung.modifiedBy}"></td>
+				</tr>
+			</tbody>
 		</table>
 	</div>
 	<hr/>
-	<div class="container">
 		<div th:if="${param.nostorno}">
 			<div class="alert alert-info">
 				Stornieren einer Veranstaltung ist nur im Gebuchtzustand möglich!
 			</div>
 		</div>
-	</div>
 </div>
 </body>
 </html>
